# ChangeLog for kde-frameworks/kxmlgui
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-frameworks/kxmlgui/ChangeLog,v 1.11 2015/04/11 17:09:47 kensington Exp $

*kxmlgui-5.9.0 (11 Apr 2015)

  11 Apr 2015; Michael Palimaka <kensington@gentoo.org> +kxmlgui-5.9.0.ebuild:
  Version bump.

  03 Apr 2015; Johannes Huber <johu@gentoo.org> -kxmlgui-5.7.0.ebuild:
  Remove KDE Frameworks 5.7.0

*kxmlgui-5.8.0 (21 Mar 2015)

  21 Mar 2015; Michael Palimaka <kensington@gentoo.org> +kxmlgui-5.8.0.ebuild:
  Version bump.

  20 Feb 2015; Johannes Huber <johu@gentoo.org> -kxmlgui-5.6.0.ebuild:
  Remove KDE Frameworks 5.6.0

*kxmlgui-5.7.0 (14 Feb 2015)

  14 Feb 2015; Johannes Huber <johu@gentoo.org> +kxmlgui-5.7.0.ebuild:
  Version bump KDE Frameworks 5.7.0

*kxmlgui-5.6.0 (09 Jan 2015)

  09 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +kxmlgui-5.6.0.ebuild,
  -kxmlgui-5.5.0.ebuild:
  Version bump.

  20 Dec 2014; Manuel Rüger <mrueg@gentoo.org> -kxmlgui-5.4.0.ebuild:
  Remove old.

*kxmlgui-5.5.0 (17 Dec 2014)

  17 Dec 2014; Manuel Rüger <mrueg@gentoo.org> +kxmlgui-5.5.0.ebuild:
  Version bump.

  14 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -kxmlgui-5.3.0.ebuild:
  Cleanup old.

*kxmlgui-5.4.0 (14 Nov 2014)

  14 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +kxmlgui-5.4.0.ebuild:
  Version bump.

*kxmlgui-5.3.0 (15 Oct 2014)

  15 Oct 2014; Michael Palimaka <kensington@gentoo.org> +kxmlgui-5.3.0.ebuild,
  +metadata.xml:
  Import from KDE overlay.