@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-frameworks/kxmlgui/kxmlgui-5.9.0.ebuild,v 1.1 2015/04/11 17:09:47 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-frameworks/kxmlgui/kxmlgui-5.9.0.ebuild,v 1.2 2015/04/22 16:25:45 kensington Exp $
 
 EAPI=5
 
@@ -25,7 +25,7 @@ RDEPEND="
 	$(add_frameworks_dep kwindowsystem)
 	dev-qt/qtdbus:5
 	dev-qt/qtgui:5
-	dev-qt/qtnetwork:5
+	dev-qt/qtnetwork:5[ssl]
 	dev-qt/qtprintsupport:5
 	dev-qt/qtwidgets:5
 	dev-qt/qtxml:5
