@@ -1,6 +1,10 @@
 # ChangeLog for kde-frameworks/kxmlgui
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-frameworks/kxmlgui/ChangeLog,v 1.11 2015/04/11 17:09:47 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-frameworks/kxmlgui/ChangeLog,v 1.12 2015/04/22 16:25:45 kensington Exp $
+
+  22 Apr 2015; Michael Palimaka <kensington@gentoo.org> kxmlgui-5.8.0.ebuild,
+  kxmlgui-5.9.0.ebuild:
+  Enforce missing USE dependency wrt bug #546828.
 
 *kxmlgui-5.9.0 (11 Apr 2015)
 
